--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,25 @@
 <html>
+
 <head></head>
+
 <body>
-    <div id="counter">
-        Counter: {{ counter }}
+    <div id="bind-attribute">
+        <span v-bind:title="message">
+            鼠标悬停几秒钟查看此处动态绑定的提示信息！
+        </span>
     </div>
     <script src="https://unpkg.com/vue@next"></script>
     <script>
-        const Counter = {
+        const AttributeBinding = {
             data() {
                 return {
-                    counter: 0
+                    message: 'You loaded this page on ' + new Date().toLocaleString()
                 }
-            },
-            mounted() {
-                setInterval(() => {
-                    this.counter++
-                }, 1000)
             }
         }
-        Vue.createApp(Counter).mount('#counter')
+
+        Vue.createApp(AttributeBinding).mount('#bind-attribute')
     </script>
 </body>
+
 </html>
