--- a/src/g2plot.html
+++ b/src/g2plot.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 
-<head></head>
+<head>
+    <style>
+        #container {
+            width: 600px;
+            height: 300px;
+        }
+    </style>
+</head>
 
 <body>
     <div id="container"></div>
@@ -21,31 +28,7 @@
             {
                 year: '1993',
                 value: 3.5
-            },
-            {
-                year: '1994',
-                value: 5
-            },
-            {
-                year: '1995',
-                value: 4.9
-            },
-            {
-                year: '1996',
-                value: 6
-            },
-            {
-                year: '1997',
-                value: 7
-            },
-            {
-                year: '1998',
-                value: 9
-            },
-            {
-                year: '1999',
-                value: 13
-            },
+            }
         ];
 
         const line = new Line('container', {
