--- a/src/g2plot.html
+++ b/src/g2plot.html
@@ -123,6 +123,7 @@
         });
 
         line.render();
+        console.log(processData(data, ['price', 'discount_price'], meta))
     </script>
 </body>
 
